--- a/templates/add_result.html
+++ b/templates/add_result.html
@@ -31,6 +31,12 @@
             line-height: 40px;
         }
 
+        .container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         .links{
             text-align: center;
             font-family: Verdana;
@@ -38,41 +44,11 @@
             opacity: 0.8;
         }
 
-        .link:link{
-          color: lightblue
-        }
-        .link:visited{
-          color: lightblue
-        }
-        .link:hover{
-          text-decoration: underline;
-          
-        }
         .main_body{
             text-align: center;
             font-family: Verdana;
             color: whitesmoke;
             opacity: 0.8;
-        }
-
-        .text{
-          font-family: Verdana;
-          color: whitesmoke;
-          opacity: 0.8;
-          margin-left: 10px;
-        }
-
-        .smalls{
-          font-family: Verdana;
-          color: whitesmoke;
-          opacity: 0.8;
-          margin-left: 10px;
-          line-height: 0.5;
-        }
-
-        hr {
-          border: 0.5px solid whitesmoke;
-          opacity: 0.8;
         }
     </style>
     
@@ -108,30 +84,7 @@ color:whitesmoke;">
       </li>
     </ul>
 </nav>
-
 <br>
- <p class = "main_body">
-    This page is a list of my projects. Projects are listed in reverse chronological order. Notes about the projects are included in each link. 
- </p>
- <br>
-
- <div>
-  <p class="text">This link is to a webpage that adds two input integers.</p>
-  <li>
-      <a class="link" href="/add">Adding Numbers.</a>
-</div>
-<hr>
- <div>
-  <p class="text">This link is to a simple webpage that squares the integer you input.</p>
-  <li>
-      <a class="link" href="/square">Number Squared.</a>
-</div>
-<hr>
- <div>
-    <p class="text"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
-    <li>
-        <a class="link" href="/hello">Hello, User</a>
-</div>
-
-</body>
-</html>
+<p class="main_body">
+Result : {{result}}
+</p>
