--- a/templates/scratch.html
+++ b/templates/scratch.html
@@ -1,2 +1,9 @@
-{% extends 'base.html' %}
 
+
+<form action="add_result">
+    Enter 1st Number : <input type="number" name = "num1" required><br>
+    Enter 2nd Number : <input type="number" name = "num2" required><br>
+    <input type="submit" name="Click Me">
+
+
+</form>
