saving progress on superfund site locator app

--- a/templates/sf_locator_results.html
+++ b/templates/sf_locator_results.html
@@ -1,1 +1,7 @@
-Complete Address: {{complete_address}}
+<!-- Complete Address: {{complete_address}} -->
+
+Your Complete Address is: {{long_address}}
+<br>
+Your Latitude is: {{latitude}}
+<br>
+Your Longitude is: {{longitude}}
