saving progress on superfund locatr app; finised function - testing

--- a/templates/sf_locator_results.html
+++ b/templates/sf_locator_results.html
@@ -1,7 +1,9 @@
 <!-- Complete Address: {{complete_address}} -->
 
-Your Complete Address is: {{long_address}}
+<!-- Your Complete Address is: {{long_address}}
 <br>
 Your Latitude is: {{latitude}}
 <br>
-Your Longitude is: {{longitude}}
+Your Longitude is: {{longitude}} -->
+<br>
+List of Site: {{site_list}}
