--- a/templates/sf_locator_results.html
+++ b/templates/sf_locator_results.html
@@ -1,29 +1,171 @@
+<!DOCTYPE html>
+<html lang="en-US">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    {% load static %}
 
+    <style>
+        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
+            font-size: smaller;
+            font-family: Verdana;
+        }
 
+        body{
+            background-color: rgba(10, 10, 10, 100);
+          }
 
-<p>There are {{count}} Superfund Sites within {{distance}} miles from your location.</p>
+        .thumb {
+            width: 35px; 
+            float: left;
+            margin-left: 10px;
+            
+        }  
+
+        .links{
+            text-align: center;
+            font-family: Verdana;
+            color: whitesmoke;
+            opacity: 0.8;
+        }
+
+        .link:link{
+          color: lightblue
+        }
+        .link:visited{
+          color: lightblue
+        }
+        .link:hover{
+          text-decoration: underline;
+          
+        }
+        .main_body{
+            text-align: center;
+            font-family: Verdana;
+            color: whitesmoke;
+            opacity: 0.8;
+        }
+        .text{
+          font-family: Verdana;
+          color: whitesmoke;
+          opacity: 0.8;
+        }
+
+        .descritpion_text{
+          font-family: Verdana;
+          color: whitesmoke;
+          opacity: 0.8;
+          margin-left: 10px;
+        }
+
+        .smalls{
+          font-family: Verdana;
+          color: whitesmoke;
+          opacity: 0.8;
+          margin-left: 10px;
+          line-height: 0.5;
+        }
+        hr {
+          border: 0.5px solid whitesmoke;
+          opacity: 0.8;
+        }
+        .container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
+    
+    <title>Projects - Curtis Smith, P.G.</title>
+
+</head>
+
+<body>
+
+<br>
+<h1 style="text-align: center;font-family: Verdana;font-weight:normal;
+color:whitesmoke;">
+    CURTIS SMITH, P.G.
+</h1>
+
+<!-- Grey with black text -->
+<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/blog">Blog</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/projects">Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/scratch">Scratch</a>
+      </li>
+    </ul>
+</nav>
+
+<br>
+
+<p class='main_body'>
+    There are {{count}} Superfund Sites within {{distance}} miles from your location.
+</p>
+
+<br>
 
 <div>
-    <ul>
-        {% for site in list_of_sites %}
-            <li>{{ site }}</li>
+    <ul style="list-style: none;">
+
+        {% for dict in list_of_dicts %}
+        <li class="text">{{dict.site_name}} -- {{dict.site_distance}} miles away</li>
+        <li class="text"> Link:
+            <a href="{{dict.site_url}}">{{dict.site_url}}</a>
+        </li>
+        <br>
         {% endfor %}
+
     </ul>
-</div>
-<div>
-    <ul>
-        {% for url in url_list %}
-            <li>
-                <a href="{{url}}">{{url}}</a>
-            </li>
-        {% endfor %}
-    </ul>
-</div>
-<div>
-    <ul>
-        {% for distance in distance_list %}
-            <li>{{ distance }} miles away</li>
-        {% endfor %}
-    </ul>
-</div>
+  </div>
+
+  <br>
+
+<h3 class='descritpion_text'>
+    Project Description
+</h3>
+<p class='descritpion_text'>
+    This project starts with an API call to the US Environemental Protection Agency (EPA) database on 
+    Superfund Site locations. Data were then cleaned and cutdown to relevant inforamtion using Pandas,
+    and then expoted into a CSV file. The API call process is lenghty (upwards of 10 minutes), so the script
+    running this page does not perform the call every time, rather it references the aformentioned CSV file. 
+</p>
+
+<p class='descritpion_text'>
+    The user inputs their address, which is then contatenated into a string that is readable by the Geopy
+    Python module, which locates the latitude and longitude coordinates associated with the user input
+    address. The Superfund site CSV file is read into a Pandas Dataframe, which containes the latitude and 
+    longitude for each Site. Geopy is used again the calculate the distance between each Superfund Site and
+    the user input address. 
+</p>
+
+<p class='descritpion_text'>
+    Again using Pandas, a list of sites names within 50 miles is returned, along with their corresponding URL
+    and distance from the user input address. The results are displayed on a new HTML page. 
+</p>
+
+<p class='descritpion_text'>
+    For more information on the EPA Superfund program, visit the link below:
+    <a href="https://www.epa.gov/superfund"> https://www.epa.gov/superfund </a>
+</p>
+
+
+</body>
+</html>
