--- a/templates/sf_locator_results.html
+++ b/templates/sf_locator_results.html
@@ -81,7 +81,7 @@
         }
     </style>
     
-    <title>Projects - Curtis Smith, P.G.</title>
+    <title>Superfund Locator - Curtis Smith, P.G.</title>
 
 </head>
 
@@ -107,9 +107,6 @@ color:whitesmoke;">
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/projects">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/scratch">Scratch</a>
       </li>
     </ul>
 </nav>
