--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,34 +19,24 @@
     {% load static %}
 
     <style>
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            /* font-size: smaller; */
+        .blurb {
+            text-align: center;
+            color: whitesmoke;
             font-family: 'Nunito', sans-serif;
         }
         body {
             background-color: rgb(59, 59, 65);
         }
-        .thumb {
-            width: 35px; 
-            float: left;
-            margin-left: 10px;
-            align-items: center;
-        }  
         .container{
             display: flex;
             align-items: center;
             justify-content: center;
         }
-        .links{
+        .header_main {
             text-align: center;
             font-family: 'Nunito', sans-serif;
+            font-weight: normal;
             color: whitesmoke;
-            opacity: 1;
-        }
-        .blurb {
-            text-align: center;
-            color: whitesmoke;
-            font-family: 'Nunito', sans-serif;
         }
         .headshot {
             width: 250px;
@@ -62,7 +52,22 @@
             background-color: whitesmoke;
             opacity: 0.7;
         }
-
+        .links{
+            text-align: center;
+            font-family: 'Nunito', sans-serif;
+            color: whitesmoke;
+            opacity: 1;
+        }
+        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
+            /* font-size: smaller; */
+            font-family: 'Nunito', sans-serif;
+        }
+        .thumb {
+            width: 35px; 
+            float: left;
+            margin-left: 10px;
+            align-items: center;
+        }  
     </style>
     
     <title>Home - Curtis Smith, P.G.</title>
@@ -73,8 +78,7 @@
 
     <br>
 
-    <h1 style="text-align: center;font-family: 'Nunito', sans-serif;font-weight:normal;
-    color:whitesmoke;">
+    <h1 class="header_main">
         CURTIS SMITH, P.G.
     </h1>
 
@@ -113,24 +117,6 @@
 
         </p>
     </div>
-
-
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col">
-                <img class="headshot" 
-                src="{% static 'images/sandia.jpg' %}" 
-                alt="Uh oh, a picture is supposed to be here. The issue is probably on your end..." 
-                title="Sandia Mountains, New Mexico">
-            </div>
-            <div class="col">
-                <p class="blurb">
-                    Hi, welcome to my webpage. Take a look at my personal projects, read about my background, or sift through my blog where I talk about creating this website from scratch and my experiences in a data analytics bootcamp.
-            
-                </p>
-        </div>
-    </div>     -->
-
 
     <hr>
 
