--- a/templates/article_details.html
+++ b/templates/article_details.html
@@ -3,78 +3,146 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
+
     {% load static %}
 
     <style>
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            font-size: smaller;
-            font-family: Verdana;
-        }
-
-        body {
-            background-color: rgba(10, 10, 10, 100);
-        }
-
-        .post {
-            font-family: Verdana;    
+        .blurb {
+            text-align: center;
             color: whitesmoke;
-            margin-left: 20px;
+            font-family: 'Nunito', sans-serif;
         }
-
-        .rule {
-            border-top: 1px solid whitesmoke ;
+        body {
+            background-color: rgb(59, 59, 65);
         }
-        
+        .container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .header_main {
+            text-align: center;
+            font-family: 'Nunito', sans-serif;
+            font-weight: normal;
+            color: whitesmoke;
+        }
+        .headshot {
+            width: 250px;
+            border-radius: 125px; 
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .headshot_section {
+            background-color: rgba(194, 108, 130, 0.1);
+        }
+        hr {
+            background-color: whitesmoke;
+            opacity: 0.7;
+        }
+        .links{
+            text-align: center;
+            font-family: 'Nunito', sans-serif;
+            color: whitesmoke;
+            opacity: 1;
+        }
+        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
+            /* font-size: smaller; */
+            font-family: 'Nunito', sans-serif;
+        }
+        .post {
+          text-align: left;
+          margin-left: 10px;
+          font-family: 'Nunito', sans-serif;
+          color: whitesmoke;
+        }
+        .thumb {
+            width: 35px; 
+            float: left;
+            margin-left: 10px;
+            align-items: center;
+        }  
     </style>
-
-    <title>Blog - Curtis Smith, P.G.</title>
+    
+    <title>Home - Curtis Smith, P.G.</title>
 
 </head>
 
-<body>
+<body>    
 
-<br>
-<h1 style="text-align: center;font-family: Verdana;font-weight:normal;
-color:whitesmoke;">
-    CURTIS SMITH, P.G.
-</h1>
-
-<!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/blog">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/projects">Projects</a>
-      </li>
-    </ul>
-</nav>
-
-<br>
-
-<h2 class= "post">{{ post.title }} </h2>
-<p class = "post">By: {{ post.author.first_name }}
-    {{ post.author.last_name }}
     <br>
-    {{ post.date }} CST
-</p>
-<hr class = "rule">
-<br>
-<div class = "post">
-{{ post.body|safe }}
-</div>
+
+    <h1 class="header_main">
+        CURTIS SMITH, P.G.
+    </h1>
+
+    <div>
+        <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/blog">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/projects">Projects</a>
+            </ul>
+        </nav>
+    </div>
+
+  <br>
+
+  <h2 class= "post">{{ post.title }} </h2>
+  <p class = "post">By: {{ post.author.first_name }}
+      {{ post.author.last_name }}
+      <br>
+      {{ post.date }} CST
+  </p>
+
+  <hr>
+  
+  <br>
+
+  <div class = "post">
+  {{ post.body|safe }}
+  </div>
+
+  <br>
+
+  <hr>
+
+  <p class="blurb">Other places you can find me:</p>
+
+  <div class='container'>
+    <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
+        <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
+        title="linkedin">
+    </a>
+    <a href="https://github.com/curtissmith291">
+        <img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
+        title="github">
+    </a>
+  </div>
+
+  <br>
+
+  <p class="blurb">curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
