--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,26 +3,45 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
+
     {% load static %}
 
     <style>
         .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            font-size: smaller;
-            font-family: Verdana;
+            font-family: 'Nunito', sans-serif;
         }
-
-        body{
-            background-color: rgba(10, 10, 10, 100);
-          }
+        .blurb {
+          text-align: center;
+          margin-left: 10px;
+          margin-right: 10px;
+          color: whitesmoke;
+          font-family: 'Nunito', sans-serif;
+        } 
+        body {
+            background-color: rgb(59, 59, 65);
+        }
         .container{
           display: flex;
           align-items: center;
           justify-content: center;
+        }
+        .header_main {
+            text-align: center;
+            font-family: 'Nunito', sans-serif;
+            font-weight: normal;
+            color: whitesmoke;
         }
         .thumb {
             width: 35px; 
@@ -30,14 +49,12 @@
             margin-left: 10px;
             
         }  
-
         .test{
             line-height: 40px;
         }
-
         .links{
             text-align: center;
-            font-family: Verdana;
+            font-family: 'Nunito', sans-serif;
             color: whitesmoke;
             opacity: 0.8;
         }
@@ -54,29 +71,34 @@
         }
         .main_body{
             text-align: center;
-            font-family: Verdana;
+            font-family: 'Nunito', sans-serif;
             color: whitesmoke;
             opacity: 0.8;
         }
-
         .text{
-          font-family: Verdana;
-          color: whitesmoke;
-          opacity: 0.8;
-        }
-
+            text-align: left;
+            margin-right: 10px;
+            font-family: 'Nunito', sans-serif;
+            color: whitesmoke;
+        } 
         .smalls{
-          font-family: Verdana;
+          font-family: 'Nunito', sans-serif;
           color: whitesmoke;
           opacity: 0.8;
           margin-left: 10px;
           line-height: 0.5;
         }
 
-        hr {
+        hr.full_length {
           border: 0.5px solid whitesmoke;
-          opacity: 0.8;
+          opacity: 0.7;
         }
+        hr.short_length {
+          border: 0.5px solid whitesmoke;
+          opacity: 0.7;
+          margin-right: 10px;
+        }
+
     </style>
     
     <title>Projects - Curtis Smith, P.G.</title>
@@ -85,74 +107,80 @@
 
 <body>
 
-<br>
-<h1 style="text-align: center;font-family: Verdana;font-weight:normal;
-color:whitesmoke;">
-    CURTIS SMITH, P.G.
-</h1>
+  <br>
 
-<!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/blog">Blog</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/projects">Projects</a>
-      </li>
-    </ul>
-</nav>
+  <h1 class="header_main">
+      CURTIS SMITH, P.G.
+  </h1>
 
-<br>
- <p class = "main_body">
-    This page is a list of my projects. Projects are listed in reverse chronological order. Notes about the projects are included in each link. 
- </p>
- <br>
+  <!-- Grey with black text -->
+  <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog">Blog</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/projects">Projects</a>
+        </li>
+      </ul>
+  </nav>
 
-<ul style="list-style: none;">
-    <p class="text">This link project that returns a list of EPA Superfind Sites within 50 miles of the 
-      input address.</p>
-    <li>
-        <a class="link" href="/sf_locator">Superfund Site Locator</a>
-  <hr>
+  <br>
 
-    <p class="text">This link is to a webpage that adds two input integers.</p>
-    <li>
-        <a class="link" href="/add">Adding Numbers</a>
+  <p class = "blurb">
+      This page is a list of my projects. Projects are listed in reverse chronological order. Notes about the projects are included in each link. 
+  </p>
 
-  <hr>
+  <br>
 
-    <p class="text">This link is to a simple webpage that squares the integer you input.</p>
-    <li>
-        <a class="link" href="/square">Number Squared</a>
-
-  <hr>
-
-      <p class="text"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
+  <ul style="list-style: none;">
+      <p class="text">This project returns a list of EPA Superfind Sites within 50 miles of the 
+        input address.</p>
       <li>
-          <a class="link" href="/hello">Hello, User</a>
-</ul>
+          <a class="link" href="/sf_locator">Superfund Site Locator</a>
+    <hr class="short_length">
+      <p class="text">This link is to a webpage that adds two input integers.</p>
+      <li>
+          <a class="link" href="/add">Adding Numbers</a>
+    <hr class="short_length">
 
-<br>
+      <p class="text">This link is to a simple webpage that squares an integer the user inputs.</p>
+      <li>
+          <a class="link" href="/square">Number Squared</a>
+    <hr class="short_length">
+        <p class="text"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
+        <li>
+            <a class="link" href="/hello">Hello, User</a>
+  </ul>
 
-<p class="links">Links</p>
+  <br>
 
-<div class='container'>
+  <hr class="full_length">
+
+  <hr>
+
+  <p class="blurb">Other places you can find me:</p>
+
+  <div class='container'>
     <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
         <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
         title="linkedin">
-     </a>
+    </a>
     <a href="https://github.com/curtissmith291">
         <img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
         title="github">
     </a>
-</div>
+  </div>
+
+  <br>
+
+  <p class="blurb">curtis.smith.geo@gmail.com</p>
 
 </body>
 </html>
