started chord detector app

--- a/templates/about.html
+++ b/templates/about.html
@@ -131,12 +131,12 @@
       </li>
       <br>
       <li>
-        UNIVERSITY OF OKLAHOMA - MS in Geology
+        UNIVERSITY OF OKLAHOMA - Master of Science in Geology
         <li> Graduated May 2016</li>
       </li>
       <br>
       <li>
-        TEXAS A&M UNIVERSITY - BS in Geology
+        TEXAS A&M UNIVERSITY - Bachelor of Science in Geology
         <li>
           Grauduated May 2014
         </li>
@@ -152,7 +152,7 @@
     </h3>
     <ul style="list-style: none;">
       <li>
-        PROFESSIONAL GEOLOGIST - California GEO #8800
+        PROFESSIONAL GEOLOGIST - California GEO #9800
 
       </li>
   </div>
